# Physicated_Raymarching

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Norm.md  README.md
renderer/: CMakeLists.txt  binaryTree.cpp  binaryTree.h  main.cpp  vulkan_renderer.cpp  vulkan_renderer.h
renderer/point_clouds/: SimpleVase.ply  barre_verticale.ply
renderer/shaders/: TURBOTCOMPILE.bat  basic_Raymarching.comp  basic_Raymarching.frag  basic_Raymarching.vert  basic_Raymarching_comp.spv  basic_Raymarching_frag.spv  basic_Raymarching_vert.spv  compile.bat  compute_Raymarching.frag  compute_Raymarching_frag.spv  raymarching.spv  shader_compute.comp  shader_compute.frag  shader_compute.vert  shader_compute_vert.spv
renderer/source/: binaryTree.cpp  binaryTree.h  main.cpp  model_parser.cpp  model_parser.h  model_properties.h  vulkan_renderer.cpp  vulkan_renderer.h
